Issue #21677: Fixed chaining nonnormalized exceptions in io close() methods.